--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="/assets/css/global.css">
+
     <style>
-        h1 {
-            color: red;
-        }
-        h1{
-            text-align: center;
-        }  /* css é aplicado em cascata, por isso esse nome */
+       
+     
     </style>
 </head>
 <body>
@@ -29,6 +27,6 @@ btnTeste.addEventListener("click", function () {
 })
 
 </script>
-
+<script src="./assets/js/main.js"></script>
 </body>
 </html>
