--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+<!--normalize-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!--fontes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;1,700&display=swap" rel="stylesheet">
+
+<!--nosso css-->
 <link rel="stylesheet" href="/assets/css/global.css">
 
     <style>
@@ -14,7 +21,8 @@
     </style>
 </head>
 <body>
-    <h1>Teste</h1>
+    <h1>Teste inicial com fonte </h1>
+    <p>Aqui é pra saber como vai ficar com essa fonte</p>
     <button id+"btnTeste" type="button">
      Teste
     </button>
@@ -27,6 +35,7 @@ btnTeste.addEventListener("click", function () {
 })
 
 </script>
+<!--nosso JS-->
 <script src="./assets/js/main.js"></script>
 </body>
 </html>
