--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 <body>
     <section class="content">
         <h1>Pokedex</h1>
-        <ol>
+        <ol class="pokemons">
             <li>Bulbasaur</li>
             <li>Ivisaur</li>
             <li>Venusaur</li>
+            <li>Charmander</li>
+            <li>Charmeleon</li>
+            <li>Charlizard</li>
         </ol>
     </section>
 
